<resources>
    <string name="commit">提交</string>
    <string name="sign">个性签名</string>
    <string name="hint_sign">请输入个性签名</string>
    <string name="nick">昵称</string>
    <string name="hint_nick">请输入昵称</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="input_empty">请输入内容</string>
    <string name="m_expired_envelopes_info">查看领取详情 ></string>
    <string name="cointype">选择资产</string>
    <string name="transfer_group_successful">转让成功</string>
    <string name="red_packet">红包</string>
    <string name="photo_image_title">图片</string>
    <string name="shotting_image_title">拍照</string>
    <string name="done1">完成</string>
    <string name="search">搜索</string>
    <string name="input_sign">请输入个性签名</string>
    <string name="save">保存</string>
    <string name="notaemail">请输入正确的email</string>
    <string name="duplicated_to_clipboard">已复制至剪切板</string>
    <string name="queding">确定</string>
    <string name="changegroupname">修改群名称</string>
    <string name="hint_groupname">输入群名称</string>
    <string name="please_open_permission">请开启相关权限</string>
    <string name="function_fail">操作失败，请稍后重试</string>
    <string name="report">举报</string>
    <string name="report_edit">请输入要举报的内容，我们会认真审核违规内容并将结果通知给您</string>
    <string name="input_skin">请输入内容</string>
    <string name="report_success">举报成功</string>
    <string name="currency_option">币种选择</string>
    <string name="email">邮箱</string>
    <string name="developing">暂未开放,敬请期待</string>
    <string name="no_update_nick">暂无权限修改群昵称</string>
    <string name="input_money1">金额不能为0</string>
    <string name="loading">加载中</string>
    <string name="update_success">更新成功</string>
    <string name="choose_a_new_owner_title">选择新群主</string>
    <string name="duplicated_login">账号在其他设备登录，请重新登录</string>
    <string name="authory_manage">权限管理</string>
    <string name="groupmanage">群管理</string>
    <string name="mute_all">全员禁言</string>
    <string name="mute_manage">禁言管理</string>
    <string name="new_enter_group">新人进群</string>
    <string name="new_redpackage_manage">社群空投</string>
    <string name="pay_enter_group">付费进群</string>
    <string name="daily_manage">日常管理</string>
    <string name="cant_addfriend">禁止互加好友</string>
    <string name="group_manage">群管理</string>
    <string name="authority_manage">权限管理</string>
    <string name="group_member">群成员</string>
    <string name="list_mute">已禁列表</string>
    <string name="list_kickout">踢出列表</string>
    <string name="choose_your_func">请选择您要的操作</string>
    <string name="delete_directly">直接删除</string>
    <string name="move_to_kickout">转到踢出</string>
    <string name="managerList">管理员列表</string>
    <string name="live_authority">直播权限</string>
    <string name="audo_live">语音直播</string>
    <string name="video_live">视频直播</string>
    <string name="groupmanage_authority">群管权限</string>
    <string name="video_manage">视频直播</string>
    <string name="audio_manage">语音直播</string>
    <string name="nopermisson">暂无操作权限</string>
    <string name="pay_money">付费金额</string>
    <string name="payrecord">付费记录</string>
    <string name="person">人</string>
    <string name="createTime">日期</string>
    <string name="user">用户</string>
    <string name="money1">单个金额</string>
    <string name="setmoneyfirst">请先设置付费金额</string>
    <string name="open_payenter_success">付费进群已开启</string>
    <string name="input_zhengshu">请输入金额</string>
    <string name="close_payenter_success">付费进群已关闭</string>
    <string name="close_payenter_first">请先关闭进群付费币种</string>
    <string name="eachpay">每人奖励数量</string>
    <string name="func_status">功能状态</string>
    <string name="allpay">总奖励数量</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="setupeach">设置每人奖励数量</string>
    <string name="setupall">设置总奖励金额</string>
    <string name="please_setall">请先设置金额以及时间</string>
    <string name="please_set_start_time">请先设置开始时间</string>
    <string name="all_less_each">总奖励金不能小于单人奖励金</string>
    <string name="newredtip">领取新人进群红包</string>
    <string name="receive_success">领取成功</string>
    <string name="redtip3">已转入钱包余额，请查收！</string>
    <string name="close">关闭</string>
    <string name="each_more_all">单人奖励金不能大于总奖励金</string>
    <string name="starttime_less_end">开始时间不能大于结束时间</string>
    <string name="url_forbidden">本会话禁止发送链接</string>
    <string name="picture_forbidden">本会话禁止发送图片</string>
    <string name="cant_sendPic">禁止发图片</string>
    <string name="cant_sendUrl">禁止发链接</string>
    <string name="slowmode">慢速模式</string>
    <string name="selectPerson">请先选择要操作的管理员</string>
    <string name="update_group_limit">升级群人数</string>
    <string name="update_group_limit_tips1">此群是</string>
    <string name="update_group_limit_tips2">人群</string>
    <string name="rule">规则</string>
    <string name="update_group_limit_tips3">1. 群主和管理员可通过付费对群人数进行升级。\n2. 群人数升级后、转让群、人数上限保留。</string>
    <string name="update2">已升级</string>
    <string name="update_success1">升级成功</string>
    <string name="force_recall">强制撤回</string>
    <string name="unChoose">暂未选择</string>
    <string name="select_cointype">请选择币种</string>
    <string name="retry">重试</string>
    <string name="group_member_manage">群成员管理</string>
    <string name="groupmanage_tips1">群主设置加群金额,成员支付后即可入群</string>
    <string name="groupmanage_tips5">设置后新成员进群即可获得红包空投</string>
    <string name="m_group_add_my_way">加群方式</string>
    <string name="groupmanage_tips2">开启后,只有群主和管理员可以发言</string>
    <string name="groupmanage_tips3">限制群成员发消息间隔时间</string>
    <string name="groupmanage_tips4">可根据社群号搜索到本社群</string>
    <string name="modify">编辑</string>
    <string name="socialname">社群名称</string>
    <string name="socialslogan">社群简介</string>
    <string name="input_socialslogan1">请输入社群简介</string>
    <string name="input_socialname1">请输入社群名称</string>
    <string name="input_socialnotice">请输入社群公告</string>
    <string name="social_notice">社群公告</string>
    <string name="social_calture">社群文化</string>
    <string name="social_act">社群动态</string>
    <string name="ic_social_end_pop2">社群管理</string>
    <string name="social_remark">我在本社群昵称</string>
    <string name="join_now">立即加入</string>
    <string name="pay_confirm">确认支付</string>
    <string name="cantdone">暂时无法操作</string>
    <string name="only_owner_edit">仅群主和管理员可编辑</string>
    <string name="social_homewebsite">社群官网</string>
    <string name="empty_socialweb">您还没有官网，赶快去编辑吧</string>
    <string name="social_files">社群资料</string>
    <string name="social_videos">社群视频</string>
    <string name="social_app">社群应用</string>
    <string name="social_activity">社群活动</string>
    <string name="edit_social_calture">编辑文化</string>
    <string name="social_empty_tips">请联系管理员开放社群文化</string>
    <string name="cantopenfile">暂时无法查看文档，请稍后再试</string>
    <string name="back">返回</string>
    <string name="input_socialnintroduction">请输入社群简介</string>
    <string name="social_slogan">社群简介</string>
    <string name="gotohilamg">请到Hilamg体验</string>
    <string name="cantparsefile">无法查看该类型文档</string>
</resources>
