<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="io.hilamg.imservice.ui.act.OwnerGroupAuthorityActivity">

    <include layout="@layout/layout_title_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e5e5e5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="12dp"
        android:text="@string/managerList"
        android:textColor="@color/textcolor3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@color/white"
        android:overScrollMode="never" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/live_authority"
            android:textColor="@color/textcolor3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/audo_live"
                android:textColor="@color/textcolor1"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/sw1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_live"
                android:textColor="@color/textcolor1"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/sw2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/groupmanage_authority"
            android:textColor="@color/textcolor3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mute_manage"
                android:textColor="@color/textcolor1"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/sw3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/force_recall"
                android:textColor="@color/textcolor1"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/sw4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_circular_bead_btn1"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>